--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.SecretChat"
         tools:targetApi="31">
         <service
-            android:name=".service.MessageService"
+            android:name=".service.MessageFirebaseService"
             android:enabled="true"
             android:exported="true"></service>
 
