--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
@@ -64,6 +63,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.4'
 
     def nav_version = "2.5.3"
     implementation("androidx.navigation:navigation-fragment:$nav_version")
@@ -75,4 +75,10 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    def camera_x_version = "1.2.2"
+    implementation "androidx.camera:camera-camera2:$camera_x_version"
+    implementation "androidx.camera:camera-lifecycle:$camera_x_version"
+    implementation "androidx.camera:camera-video:$camera_x_version"
+    implementation "androidx.camera:camera-view:$camera_x_version"
 }
