--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,6 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camera_x_version"
     implementation "androidx.camera:camera-video:$camera_x_version"
     implementation "androidx.camera:camera-view:$camera_x_version"
+
+    implementation("com.android.volley:volley:1.2.1")
 }
