--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     implementation "androidx.camera:camera-view:$camera_x_version"
 
     implementation("com.android.volley:volley:1.2.1")
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    kapt 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
 }
